[metadata]
name = saiblo-dev-tools
version = 0.0.1
author = BillXWB
author_email = 1370302499@qq.com
description = Saiblo 游戏开发人员脚本工具
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saiblo/saiblo-dev-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
scripts =
    saiblo-dev-tools
install_requires =
    requests