[metadata]
name = saiblo-dev-tools
version = 0.0.2
author = BillXWB
author_email = 1370302499@qq.com
description = Saiblo 游戏开发人员脚本工具
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saiblo/saiblo-dev-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests

[options.entry_points]
console_scripts =
    saiblo-dev-tools = saiblo_dev_tools:entry_point